--- a/config/release_properties.properties
+++ b/config/release_properties.properties
@@ -5,4 +5,4 @@ ApplicationIdSyffix = .release
 
 SERVER_URL = "https://release.themoviedb.org/3/"
 
-MESSAGE = "Release Phase : This is from Release Branch #0."
+MESSAGE = "Release Phase : This is from Release Branch #1 >> Current Branch or Default."
