--- a/config/test_properties.properties
+++ b/config/test_properties.properties
@@ -5,4 +5,4 @@ ApplicationIdSyffix = .test
 
 SERVER_URL = "https://dev.themoviedb.org/3/"
 
-MESSAGE = "Test Phase : This is from Test Branch #0."
+MESSAGE = "Test Phase : This is from Test Branch #."
