--- a/config/development_properties.properties
+++ b/config/development_properties.properties
@@ -5,4 +5,4 @@ ApplicationIdSyffix = .dev
 
 SERVER_URL = "https://dev.themoviedb.org/3/"
 
-MESSAGE = "Development Phase : This is from Development Branch #1."
+MESSAGE = "Development Phase : This is from Development Branch #1 >> Current Branch or Default."
